Fix map container being too high on iOS

--- a/rogue-thi-app/styles/Map.module.css
+++ b/rogue-thi-app/styles/Map.module.css
@@ -1,7 +1,11 @@
 .container {
   display: flex;
   flex-direction: column;
+
+  /* fill entire viewport height since we don't need scrolling on this page */
   height: 100vh;
+  /* fix for iOS since Safari would otherwise include the status bar in the viewport height */
+  max-height: fill-available;
 }
 
 .mapContainer {
